k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: name-virtual-host-ingress
  namespace: development
spec:
  tls:
  - secretName: tls-foo-bar
  - secretName: tls-bar-foo
  rules:
  - host: foo.bar.com
    http:
      paths:
      - backend:
          serviceName: service1
          servicePort: 80
  - host: bar.foo.com
    http:
      paths:
      - backend:
          serviceName: service2
          servicePort: 80
---
apiVersion: v1
kind: Service
metadata:  
  name: service1
  namespace: development
spec:
  selector:    
    app: api1
  type: ClusterIP
  ports:  
  - name: http
    port: 80
    targetPort: 5000
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:  
  name: service2
  namespace: development
spec:
  selector:    
    app: api2
  type: ClusterIP
  ports:  
  - name: http
    port: 80
    targetPort: 5000
    protocol: TCP
